--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,5 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-babylib = {path = "/home/snorre/Rust/Projects/babylib"}
+babylib = {git = "https://github.com/RipInPease/Babylib.git"}
 rand = "0.9.1"
