--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,5 @@ edition = "2024"
 
 [dependencies]
 Babylib = {git = "https://github.com/RipInPease/Babylib.git"}
+crossterm = "0.29.0"
 rand = "0.9.1"
